--- a/vignettes/lineagespot.Rmd
+++ b/vignettes/lineagespot.Rmd
@@ -151,7 +151,7 @@ library(lineagespot)
 `lineagespot` can be run by calling one function that implements the overall pipeline:
 
 ```{r eval=TRUE}
-results = lineagespot(vcf_folder = system.file("extdata", "vcf-files", 
+results <- lineagespot(vcf_folder = system.file("extdata", "vcf-files", 
                                                 package = "lineagespot"),
 
                       gff3_path = system.file("extdata", 
